R: make list type more generic so we are not locked into list implementation